--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
   "peerDependencies": {
     "react": ">=16.8.6",
     "react-native": ">=0.60.0-rc.2",
-    "react-native-windows": ">=0.63.0"
+    "react-native-windows": ">=0.63.0",
+    "@types/node": "^10.14.21"
   },
   "peerDependenciesMeta": {
     "react-native-windows": {
