--- a/android/build.gradle
+++ b/android/build.gradle
@@ -91,4 +91,8 @@ dependencies {
     implementation "androidx.media:media:1.1.0"
     implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.1.0-alpha01"
     implementation "com.github.bumptech.glide:glide:4.7.1"
+
+    // required to avoid crash on Android 12 API 31
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    implementation 'androidx.work:work-runtime:2.7.1'
 }
